# swagger/swagger.yaml
@@ -90,22 +90,29 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    category:
-                      type: string
-                    name_product:
-                      type: string
-                    provider:
-                      type: string
-                    references_product:
-                      type: string
-                    stock:
-                      type: integer
-                    price:
-                      type: number
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        category:
+                          type: string
+                        name_product:
+                          type: string
+                        provider:
+                          type: string
+                        references_product:
+                          type: string
+                        stock:
+                          type: integer
+                        price:
+                          type: number
     delete:
       summary: Delete a product by its reference
       parameters:
@@ -135,21 +142,28 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    number_order:
-                      type: integer
-                      description: L'ID de la commande.
-                    total_price:
-                      type: number
-                      format: float
-                      description: Le prix total de la commande.
-                    date_order:
-                      type: string
-                      format: date-time
-                      description: La date de la commande.
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        number_order:
+                          type: integer
+                          description: L'ID de la commande.
+                        total_price:
+                          type: number
+                          format: float
+                          description: Le prix total de la commande.
+                        date_order:
+                          type: string
+                          format: date-time
+                          description: La date de la commande.
                     
         '400':
           description: Mauvaise requête (ex. référence non valide).
@@ -175,22 +189,29 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    category:
-                      type: string
-                    name_product:
-                      type: string
-                    provider:
-                      type: string
-                    references_product:
-                      type: string
-                    stock:
-                      type: integer
-                    price:
-                      type: number
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        category:
+                          type: string
+                        name_product:
+                          type: string
+                        provider:
+                          type: string
+                        references_product:
+                          type: string
+                        stock:
+                          type: integer
+                        price:
+                          type: number
         '400':
           description: Mauvaise requête (ex. référence non valide).
         '404':
@@ -243,12 +264,19 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    category:
+                type: object
+                properties:
+                    message:
                       type: string
+                    status:
+                      type: number
+                    data:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          category:
+                            type: string
     delete:
       summary: Delete a category by its name
       parameters:
@@ -307,16 +335,23 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    name_provider:
-                      type: string
-                    product: 
-                      type : array
-                      items: 
-                        type: string                
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                        type: object
+                        properties:
+                          name_provider:
+                            type: string
+                          product: 
+                            type : array
+                            items: 
+                              type: string                
     delete:
       summary: Delete a provider by its name
       parameters:
@@ -484,25 +519,34 @@ paths:
               schema:
                 type: object
                 properties:
-                  email:
+                  message:
                     type: string
-                  firstname:
-                    type: string
-                  lastname:
-                    type: string
-                  address:
-                    type: string
-                  orders:
+                  status:
+                    type: number
+                  data:
                     type: array
-                    items: 
+                    items:
                       type: object
                       properties:
-                        number_order: 
+                        email:
                           type: string
-                        date_order: 
+                        firstname:
                           type: string
-                        total_price: 
+                        lastname:
                           type: string
+                        address:
+                          type: string
+                        orders:
+                          type: array
+                          items: 
+                            type: object
+                            properties:
+                              number_order: 
+                                type: string
+                              date_order: 
+                                type: string
+                              total_price: 
+                                type: string
     delete:
       summary: Delete a client by their email
       parameters:
@@ -532,21 +576,28 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    number_order:
-                      type: integer
-                      description: L'ID de la commande.
-                    total_price:
-                      type: number
-                      format: float
-                      description: Le prix total de la commande.
-                    date_order:
-                      type: string
-                      format: date-time
-                      description: La date de la commande.
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        number_order:
+                          type: integer
+                          description: L'ID de la commande.
+                        total_price:
+                          type: number
+                          format: float
+                          description: Le prix total de la commande.
+                        date_order:
+                          type: string
+                          format: date-time
+                          description: La date de la commande.
                     
         '400':
           description: Mauvaise requête (ex. email non valide).
@@ -554,6 +605,94 @@ paths:
           description: Client ou commandes non trouvées.
         '500':
           description: Erreur serveur interne.
+
+  /stats/top-products:
+    get:
+      summary: Produits les plus vendus
+      description: Renvoie les 10 produits les plus vendus.
+      responses:
+        '200':
+          description: Liste des produits les plus vendus.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        category:
+                          type: string
+                        name_product:
+                          type: string
+                        provider:
+                          type: string
+                        references_product:
+                          type: string
+                        stock:
+                          type: integer
+                        price:
+                          type: number
+                        total_sales:
+                          type: integer
+        '400':
+          description: Mauvaise requête (ex. email non valide).
+        '404':
+          description: Client ou commandes non trouvées.
+        '500':
+          description: Erreur serveur interne.
+
+  /stats/total-sales:
+    get:
+      summary: Total des ventes sur une période
+      parameters:
+        - in: query
+          name: start_date
+          schema:
+            type: string
+            format: date
+          required: true
+          description: Date de début au format YYYY-MM-DD.
+        - in: query
+          name: end_date
+          schema:
+            type: string
+            format: date
+          required: true
+          description: Date de fin au format YYYY-MM-DD.
+      responses:
+        '200':
+          description: Total des ventes.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  status:
+                    type: number
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        total_sales:
+                          type: number
+        '400':
+          description: Mauvaise requête (ex. email non valide).
+        '404':
+          description: Client ou commandes non trouvées.
+        '500':
+          description: Erreur serveur interne.
+
+    
 components: {
   securitySchemes: {
     ApiKeyAuth: {
